<resources>
    <string name="app_name">Hangman Game</string>
    <string name="hangman_game">Hangman Game!</string>
    <string name="main_menu">Main menu</string>
    <string name="play_game">Play game</string>
    <string name="back_text">Back</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_hagnman">Hangman Game developed by Sebastian Strus.</string>
    <string name="back_button_text">Go back to main menu</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_result">Result</string>
    <string name="result_text">You won!</string>
    <string name="tries_text">Number of tries: </string>
    <string name="guessed_word_text">Guessed word:  </string>
    <string name="enter_letter_text">Enter one letter:</string>
    <string name="to_be_or_not_to_be">To be, or not to be!</string>
    <string name="guess">Guess!</string>
    <string name="word">WORD</string>
    <string name="used_letters">Used letters:</string>
    <string name="play_text">Play</string>
    <string name="info_text">Info</string>
    <string name="result_won">You won!</string>
    <string name="result_lost">You lose!</string>
</resources>
