<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sebastianstrus.hangmangame.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu"
    android:background="@drawable/hangman_background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hangman_game"
        android:textSize="36sp"
        android:gravity="center"
        android:id="@+id/textView1"
        tools:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="40dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:text="@string/play_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:id="@+id/play_game_button"
        android:onClick="playGameButtonPressed"/>

    <Button
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_button"
        android:layout_below="@+id/play_game_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="aboutButtonPressed"/>




</RelativeLayout>
