<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sebastianstrus.hangmangame.GameActivity"
    tools:showIn="@layout/activity_game"
    android:background="#FFFFFF">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/word_text"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:textColor="#FFC107"
        android:textStyle="bold"
        android:gravity="center"
        android:text="-----" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:src="@drawable/hang10"
        android:padding="20dp"
        android:layout_below="@+id/word_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/used_letters_label"
        android:layout_below="@+id/image"
        android:text="@string/used_letters"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/letters_text"
        android:gravity="center"
        android:textSize="20sp"
        android:text=""
        android:textStyle="bold"
        android:layout_below="@id/used_letters_label"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tries_message"
        android:layout_below="@id/letters_text"
        android:text="@string/tries_text"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tries_text"
        android:text="10"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="#64DD17"
        android:textStyle="bold"
        android:layout_below="@id/tries_message"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_text"
        android:text="@string/enter_letter_text"
        android:layout_below="@+id/tries_text"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guess_edit"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_below="@id/label_text"
        android:gravity="center"
        android:text=""/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guess_button"
        android:text="@string/guess"
        android:layout_below="@+id/guess_edit"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
